fix overlapping content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -479,8 +479,8 @@ h3.my-profession
 
 .about .about-content .personal-info .info-item
 {
-    flex: 0 0 50%;
-    max-width: 50%;
+    flex: 0 0 100%;
+    max-width: 100%;
 }
 
 .about .about-content .personal-info .info-item p
